Release Notes

* 4/17/2016
  * fixed killUnusedEvent* to check jobsetID


* 4/13/2016
  * fixed insertTaskParam to update JEDI taskparam table when task is running
  * fixed listDatasetByGUIDs to regard UnknownDatasetException as fatal

* 4/11/2016
  * changed to accept retry(newOpts) when analy tasks are running
  * changed getJob for retried ES merge jobs
  * fixed double counting in getCriteria 

* 4/10/2016
  * changed propageResult for cloned jobs to set jobset_id

* 4/8/2016
  * setting destinationse for log of ES merge

* 4/7/2016
  * changed not to send ES merge to short queue
  * changed not to send log info to ES merge
  * using -details richtype for EI
  * recording jobsetIDs and their history for ES

* 4/6/2016
  * fixed fairshare for WORLD
  * introduced connection pool for EI lookup

* 4/5/2016
  * fixed updateUnmergeDS for running
  * changed submitJobs to require FQANs for atlas
  * fixed ppE to use sites with corecount=null when looking for score
  * fixed killUnusedESC to kill running consumers when killAll
  * added prod role check in submitJob

* 4/4/2016
  * fixed nucleus.getAssoicatedEndpoint for dst:

* 4/1/2016
  * changed updateRelatedEventServiceJobs to update stateChangeTime

* 3/31/2016
  * added Oracle EI stuff

* 3/24/2016
  * fixed getEventRanges to kill unused consumers if no more events

* 3/23/2016
  * fixed cloned jobs to set pandaIDs in Dataset_Contents
  * added changeTaskModTimePanda and triggerTaskBrokerage
  * fixed AdderAtlas for RSEProtocolNotSupported
  * added checkClonedJob
  * changed localEsMerge to send merge jobs to score

* 3/21/2016
  * changed checkTaskStatus to allow updates in exhausted
  * fixed retryJob not to add metadata
  * fixed ES merge retry to take attemptNr into account
  * fixed killESC for multiple inputs
  
* 3/18/2016
  * resetting ramCount to 0 for ES merge

* 3/16/2016
  * added putLogToOS
  * added newParams in retryTask
  * changed dispatcher to ignore fairshare for ES merge

* 3/14/2016